tests/compile-fail/integration__integration__general__func_inline_const.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: too many function qualifiers
   ┌─ <input>:26:16
   │
26 │         inline const int foo() { return 1; }
   │                ^^^^^ extra qualifier


